--- a/gojek.automation.cleartrip/test-output/index.html
+++ b/gojek.automation.cleartrip/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite">
-              <span class="suite-name border-passed">ClearTrip roundTrip Flight booking Suite</span>
+              <span class="suite-name border-failed">ClearTrip roundTrip Flight booking Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite" class="hide-methods passed suite-ClearTrip_roundTrip_Flight_booking_Suite"> (hide)</a> <!-- hide-methods passed suite-ClearTrip_roundTrip_Flight_booking_Suite -->
-                      <a href="#" panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite" class="show-methods passed suite-ClearTrip_roundTrip_Flight_booking_Suite"> (show)</a> <!-- show-methods passed suite-ClearTrip_roundTrip_Flight_booking_Suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite" class="hide-methods failed suite-ClearTrip_roundTrip_Flight_booking_Suite"> (hide)</a> <!-- hide-methods failed suite-ClearTrip_roundTrip_Flight_booking_Suite -->
+                      <a href="#" panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite" class="show-methods failed suite-ClearTrip_roundTrip_Flight_booking_Suite"> (show)</a> <!-- show-methods failed suite-ClearTrip_roundTrip_Flight_booking_Suite -->
                     </span>
-                    <div class="method-list-content passed suite-ClearTrip_roundTrip_Flight_booking_Suite">
+                    <div class="method-list-content failed suite-ClearTrip_roundTrip_Flight_booking_Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
+                        <img width="3%" src="failed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite" title="gojek.automation.cleartrip.RoundTripBookingTest" hash-for-method="bookRoundTrip">bookRoundTrip</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-ClearTrip_roundTrip_Flight_booking_Suite -->
+                    </div> <!-- method-list-content failed suite-ClearTrip_roundTrip_Flight_booking_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,9 +117,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-ClearTrip_roundTrip_Flight_booking_Suite" class="panel ClearTrip_roundTrip_Flight_booking_Suite">
-          <div class="suite-ClearTrip_roundTrip_Flight_booking_Suite-class-passed">
+          <div class="suite-ClearTrip_roundTrip_Flight_booking_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">gojek.automation.cleartrip.RoundTripBookingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -128,10 +128,42 @@
                   <a name="bookRoundTrip">
                   </a> <!-- bookRoundTrip -->
                   <span class="method-name">bookRoundTrip</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: An element could not be located on the page using the given search parameters. (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 9.14 seconds
+For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
+Build info: version: &apos;3.0.1&apos;, revision: &apos;1969d75&apos;, time: &apos;2016-10-18 09:49:13 -0700&apos;
+System info: host: &apos;vikas-PC&apos;, ip: &apos;192.168.43.62&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;x86&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_111&apos;
+Driver info: io.appium.java_client.android.AndroidDriver
+Capabilities [{app=C:\Users\user\git\GoJek\gojek.automation.cleartrip\src\test\resources\cleartrip.apk, networkConnectionEnabled=true, warnings={}, databaseEnabled=false, deviceName=MPDQWW4161117007847, platform=LINUX, desired={app=C:\Users\user\git\GoJek\gojek.automation.cleartrip\src\test\resources\cleartrip.apk, platformVersion=Android, platformName=Android, deviceName=MPDQWW4161117007847}, platformVersion=6.0, webStorageEnabled=false, locationContextEnabled=false, browserName=Android, takesScreenshot=true, javascriptEnabled=true, platformName=Android}]
+Session ID: 84e0c5cc-7c4d-4993-804a-3b67c88b00be
+*** Element info: {Using=name, value=29}
+	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:216)
+	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:168)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:635)
+	at io.appium.java_client.DefaultGenericMobileDriver.execute(DefaultGenericMobileDriver.java:40)
+	at io.appium.java_client.AppiumDriver.execute(AppiumDriver.java:1)
+	at io.appium.java_client.android.AndroidDriver.execute(AndroidDriver.java:1)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
+	at io.appium.java_client.DefaultGenericMobileDriver.findElement(DefaultGenericMobileDriver.java:56)
+	at io.appium.java_client.AppiumDriver.findElement(AppiumDriver.java:1)
+	at io.appium.java_client.android.AndroidDriver.findElement(AndroidDriver.java:1)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElementByName(RemoteWebDriver.java:449)
+	at io.appium.java_client.DefaultGenericMobileDriver.findElementByName(DefaultGenericMobileDriver.java:104)
+	at io.appium.java_client.AppiumDriver.findElementByName(AppiumDriver.java:1)
+	at io.appium.java_client.android.AndroidDriver.findElementByName(AndroidDriver.java:1)
+	at org.openqa.selenium.By$ByName.findElement(By.java:303)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:360)
+	at io.appium.java_client.DefaultGenericMobileDriver.findElement(DefaultGenericMobileDriver.java:52)
+	at io.appium.java_client.AppiumDriver.findElement(AppiumDriver.java:1)
+	at io.appium.java_client.android.AndroidDriver.findElement(AndroidDriver.java:1)
+	at gojek.automation.cleartrip.UtilityFuntions.tap(UtilityFuntions.java:38)
+	at gojek.automation.cleartrip.RoundTripBookingTest.bookRoundTrip(RoundTripBookingTest.java:40)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-ClearTrip_roundTrip_Flight_booking_Suite-class-passed -->
+          </div> <!-- suite-ClearTrip_roundTrip_Flight_booking_Suite-class-failed -->
         </div> <!-- panel ClearTrip_roundTrip_Flight_booking_Suite -->
         <div panel-name="test-xml-ClearTrip_roundTrip_Flight_booking_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -188,12 +220,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'bookRoundTrip')
 data.setCell(0, 2, 'gojek.automation.cleartrip.RoundTripBookingTest')
-data.setCell(0, 3, 191067);
+data.setCell(0, 3, 57841);
 window.suiteTableData['ClearTrip_roundTrip_Flight_booking_Suite']= { tableData: data, tableDiv: 'times-div-ClearTrip_roundTrip_Flight_booking_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 57 seconds</span>
               <div id="times-div-ClearTrip_roundTrip_Flight_booking_Suite">
               </div> <!-- times-div-ClearTrip_roundTrip_Flight_booking_Suite -->
             </div> <!-- times-div -->
@@ -225,12 +257,14 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">bookRoundTrip</span>
-                <span class="method-start">82194 ms</span>
+                <span class="method-start">116847 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeApp</span>
-                <span class="method-start">273268 ms</span>
+                <span class="method-start">174754 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
